[package]
name = "nice"
version = "0.1.8"
description = "Bindings for libnice >= v0.1.4"
homepage = "https://github.com/manuels/libnice.rs"
license = " GPL-2.0"
authors = ["Manuel Schölling <manuel.schoelling@gmx.de>"]

[dependencies]
log = "^0.3.6"
libc = "^0.2"
bitflags = "^0.7"
env_logger = "^0.3.3"
condition_variable = "^0.1"
